[gd_scene load_steps=5 format=3 uid="uid://buv45ibk1363j"]

[ext_resource type="Texture2D" uid="uid://df65fhgwcnceb" path="res://assets/ItemPlaceholder.png" id="1_gvl4d"]
[ext_resource type="Script" path="res://scripts/objects/item.gd" id="1_rflei"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wvq51"]
radius = 4.1727

[sub_resource type="CircleShape2D" id="CircleShape2D_yjqwb"]

[node name="Item" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 2
script = ExtResource("1_rflei")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_gvl4d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_wvq51")

[node name="CollectRange" type="Area2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectRange"]
shape = SubResource("CircleShape2D_yjqwb")

[node name="HoverText" type="Label" parent="."]
offset_left = -4.19234
offset_top = -10.6937
offset_right = 35.8076
offset_bottom = 15.3063
scale = Vector2(0.4, 0.4)
text = "[ E ]"

[connection signal="body_entered" from="CollectRange" to="." method="_on_collect_range_body_entered"]
[connection signal="body_exited" from="CollectRange" to="." method="_on_collect_range_body_exited"]
